--- a/pbe-fragment.html
+++ b/pbe-fragment.html
@@ -1,9 +1,9 @@
-<dom-module id="pbe-literal">
+<dom-module id="pbe-fragment">
 <template>
 </template>
 <script>
 Polymer({
-  is: 'pbe-literal',
+  is: 'pbe-fragment',
   properties: {
     contents: { notify: true, value: "" },
     after: { value: function() { return new Promise((function(resolve, reject) { this.done = resolve; }).bind(this)); } },
