--- a/pbe-route.html
+++ b/pbe-route.html
@@ -19,14 +19,14 @@ Polymer({
     console.log('attached a pbe-route');
     global.app.get(this.path, function(req, res) {
       var el = createElement(this.handler);
-      var data = {}
+      var route = {}
       for (var param in req.params) {
-        data[param] = req.params[param];
+        route[param] = req.params[param];
       }
-      el.data = data;
+      el.route = route;
       // TODO consider using response.content, though this will mean that handlers must import
       // a behavior to set up 'response' as a property.
-      el.dataReady.then(() => { res.status(200).send(el.response); el.remove(); });
+      el.responseReady.then(() => { res.status(200).send(el.response); el.remove(); });
       this.appendChild(el);
     }.bind(this));
   }
